--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
     sdk: flutter
   font_awesome_flutter: ^10.4.0
   google_fonts: ^5.1.0
+  google_maps_flutter: ^2.3.1
   sliding_up_panel: ^2.0.0+1
 
 dev_dependencies:
